# sdiep-schur

./: CITATION.cff  LICENSE  README.md  pyproject.toml  sdiep.py
data/: exp1_coherence_summary.csv
notebooks/: README.md
paper/: main_clean.tex
paper/data/: exp1_coherence_systematic.csv  exp2_success_rates.csv  exp3_sharpness_n12.csv  exp4_computational_cost.csv  exp5_convergence.csv  supp_thresholds.csv
scripts/: reproduce_paper.py
src/sdiep_schur/: __init__.py  bases.py  experiments.py  plotting.py  sampling.py  theory.py
tests/: test_core.py
