[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sdiep-schur"
version = "0.1.0"
description = "Reference implementation and reproducible experiments for Schur-template constructions in the SDIEP."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "GPL-3.0-or-later"}
authors = [
  {name = "Tomasz Kania"}
]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "matplotlib>=3.8",
]
keywords = [
  "SDIEP",
  "symmetric doubly stochastic inverse eigenvalue problem",
  "Suleimanova spectrum",
  "Hadamard",
  "Walsh-Hadamard",
  "cycle basis",
]
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Mathematics",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]
repro = ["jupyter>=1.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
